@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
 # Distributed under the GPL v2
 
+  06 Mar 2009; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
+  Apply patch from robbat2 to fix whitespace breakage in multipath code
+
   06 Mar 2009; Andrew Gaffney <agaffney@gentoo.org> gen_determineargs.sh,
   genkernel.conf:
   Apply patch from robbat2 to finish wiring up multipath support
